[gd_scene load_steps=4 format=3 uid="uid://btpyb8jh1ffcq"]

[ext_resource type="Script" uid="uid://sy5aqfiix4ta" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="LabelSettings" uid="uid://cg47jsd6lsn52" path="res://LS.tres" id="2_fu7sn"]
[ext_resource type="LabelSettings" uid="uid://d4lmfeu3xhnpq" path="res://HeaderLabel.tres" id="3_fu7sn"]

[node name="main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Play?"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -189.0
offset_right = 189.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Main Menu?"
label_settings = ExtResource("2_fu7sn")

[node name="Button2" type="Button" parent="."]
layout_mode = 1
offset_right = 63.0
offset_bottom = 31.0
text = "English
"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 139.0
offset_right = 382.0
offset_bottom = 586.0

[node name="ItemList" type="ItemList" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -144.5
offset_right = 154.0
offset_bottom = 205.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 9.0
offset_right = 344.0
offset_bottom = 53.0
text = "Choose Input Device "
label_settings = ExtResource("3_fu7sn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ApiPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 189.0
offset_top = -185.0
offset_right = 535.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2

[node name="Head" type="Label" parent="ApiPanel"]
layout_mode = 0
offset_top = 9.0
offset_right = 344.0
offset_bottom = 53.0
text = "Groq AI - API key"
label_settings = ExtResource("3_fu7sn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Body" type="RichTextLabel" parent="ApiPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 79.0
offset_right = 309.0
offset_bottom = 185.0
focus_mode = 2
bbcode_enabled = true
text = "[font=res://Fonts/static/Comfortaa-Medium.ttf]This game uses Groq AI for determining if the answeres fit.

Get your API key at [color=Coral][url=\"groq.com\"]groq.com[/url][/color][/font]
[color=darkgray](The password is saved)[/color]"
selection_enabled = true

[node name="Edit" type="LineEdit" parent="ApiPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 201.0
offset_right = 309.0
offset_bottom = 232.0
placeholder_text = "Your key here!"

[node name="Submit" type="Button" parent="ApiPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 270.0
offset_right = 309.0
offset_bottom = 301.0
text = "Submit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="item_selected" from="Panel/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="meta_clicked" from="ApiPanel/Body" to="." method="_on_body_meta_clicked"]
[connection signal="text_submitted" from="ApiPanel/Edit" to="." method="_on_edit_text_submitted"]
[connection signal="pressed" from="ApiPanel/Submit" to="." method="_on_submit_pressed"]
